Simplifies the work needed to create a new deb
- automates much of the workflow for building a deb package
- adds a version.txt file that is used configure the version on the deb package
  * updates the Dockerfile to make use of this

--- a/tools/dockerfile/grpc_build_deb/Dockerfile
+++ b/tools/dockerfile/grpc_build_deb/Dockerfile
@@ -30,6 +30,9 @@
 # Dockerfile to build Debian packages for gRPC C core.
 FROM grpc/base
 
+# Add the file containing the gRPC version
+ADD version.txt version.txt
+
 # Install dependencies
 RUN apt-get update && apt-get install -y lintian
 
