Allow restricting platforms for certain tests

--- a/templates/tools/run_tests/tests.json.template
+++ b/templates/tools/run_tests/tests.json.template
@@ -4,6 +4,7 @@ import json
 
 ${json.dumps([{"name": tgt.name,
                "language": tgt.language,
+	       "platforms": tgt.get("platforms", ["windows", "posix"]),
                "flaky": tgt.get("flaky", False)}
               for tgt in targets
               if tgt.get('run', True) and tgt.build == 'test'],
