--- a/templates/vsprojects/vs2013/Grpc.mak.template
+++ b/templates/vsprojects/vs2013/Grpc.mak.template
@@ -32,7 +32,10 @@
 <%def name="to_windows_path(path)">${path.replace('/','\\')}</%def>\
 <%
   allowed_dependencies = set(['gpr', 'grpc', 'gpr_test_util', 'grpc_test_util'])
-  buildable_targets = [ target for target in targets if set(target.deps).issubset(allowed_dependencies) and all([src.endswith('.c') for src in target.src])]
+  buildable_targets = [ target for target in targets
+                        if set(target.deps).issubset(allowed_dependencies) and
+		           all([src.endswith('.c') for src in target.src]) and
+			   'windows' in target.platforms ]
   c_test_targets = [ target for target in buildable_targets if target.build == 'test' and not target.language == 'c++' ]
   cxx_test_targets = [ target for target in buildable_targets if target.build == 'test' and target.language == 'c++' ]
 %>\
