--- a/vsprojects/vs2013/grpc.vcxproj
+++ b/vsprojects/vs2013/grpc.vcxproj
@@ -150,6 +150,8 @@
     <ClInclude Include="..\..\src\core\json\json_common.h" />
     <ClInclude Include="..\..\src\core\json\json_reader.h" />
     <ClInclude Include="..\..\src\core\json\json_writer.h" />
+    <ClInclude Include="..\..\src\core\profiling\timers.h" />
+    <ClInclude Include="..\..\src\core\profiling\timers_preciseclock.h" />
     <ClInclude Include="..\..\src\core\statistics\census_interface.h" />
     <ClInclude Include="..\..\src\core\statistics\census_log.h" />
     <ClInclude Include="..\..\src\core\statistics\census_rpc_stats.h" />
@@ -335,6 +337,8 @@
     <ClCompile Include="..\..\src\core\json\json_string.c">
     </ClCompile>
     <ClCompile Include="..\..\src\core\json\json_writer.c">
+    </ClCompile>
+    <ClCompile Include="..\..\src\core\profiling\timers.c">
     </ClCompile>
     <ClCompile Include="..\..\src\core\statistics\census_init.c">
     </ClCompile>
