--- a/vsprojects/vs2013/grpc.vcxproj.filters
+++ b/vsprojects/vs2013/grpc.vcxproj.filters
@@ -7,7 +7,7 @@
     <ClCompile Include="..\..\src\core\httpcli\httpcli.c">
       <Filter>src\core\httpcli</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\core\httpcli\httpcli_security_context.c">
+    <ClCompile Include="..\..\src\core\httpcli\httpcli_security_connector.c">
       <Filter>src\core\httpcli</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\core\httpcli\parser.c">
@@ -28,9 +28,6 @@
     <ClCompile Include="..\..\src\core\security\credentials_win32.c">
       <Filter>src\core\security</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\core\security\factories.c">
-      <Filter>src\core\security</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\core\security\google_default_credentials.c">
       <Filter>src\core\security</Filter>
     </ClCompile>
@@ -43,7 +40,7 @@
     <ClCompile Include="..\..\src\core\security\secure_transport_setup.c">
       <Filter>src\core\security</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\core\security\security_context.c">
+    <ClCompile Include="..\..\src\core\security\security_connector.c">
       <Filter>src\core\security</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\core\security\server_secure_chttp2.c">
@@ -386,7 +383,7 @@
     <ClInclude Include="..\..\src\core\httpcli\httpcli.h">
       <Filter>src\core\httpcli</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\core\httpcli\httpcli_security_context.h">
+    <ClInclude Include="..\..\src\core\httpcli\httpcli_security_connector.h">
       <Filter>src\core\httpcli</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\core\httpcli\parser.h">
@@ -410,7 +407,7 @@
     <ClInclude Include="..\..\src\core\security\secure_transport_setup.h">
       <Filter>src\core\security</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\core\security\security_context.h">
+    <ClInclude Include="..\..\src\core\security\security_connector.h">
       <Filter>src\core\security</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\core\tsi\fake_transport_security.h">
