--- a/src/csharp/Grpc.Core/Grpc.Core.nuspec
+++ b/src/csharp/Grpc.Core/Grpc.Core.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<package >
+<package>
   <metadata>
     <id>Grpc.Core</id>
     <title>gRPC Core</title>
@@ -7,7 +7,7 @@
     <description>Core C# implementation of gRPC - an RPC library and framework. See project site for more info.
      This is an experimental release, not ready to use.
     </description>
-    <version>0.2.0</version>
+    <version>0.2.1</version>
     <authors>Google Inc.</authors>
     <owners>jtattermusch</owners>
     <licenseUrl>https://github.com/grpc/grpc/blob/master/LICENSE</licenseUrl>
@@ -16,6 +16,12 @@
     <releaseNotes>The first experimental release. Not ready to use.</releaseNotes>
     <copyright>Copyright 2015, Google Inc.</copyright>
     <tags>gRPC RPC Protocol HTTP/2</tags>
+	<dependencies>
+	  <dependency id="Microsoft.Bcl.Immutable" version="1.0.34" />
+      <dependency id="grpc.dependencies.zlib.redist" version="1.2.8.9" />
+	  <dependency id="grpc.dependencies.openssl.redist" version="1.0.2.2" />
+	  <dependency id="grpc.native.csharp_ext.redist" version="0.6.0.0" />
+    </dependencies>
   </metadata>
   <files>
     <file src="bin/Release/Grpc.Core.dll" target="lib/net45" />
