Compile protobuf before compiling shared C++ libraries.
This change fixes a parallel make which always failed with "cannot find
-lprotobuf".

For C++ static libraries, protobuf was already added as dependency, see
commit 5383062df6182a62bb4df99aa06fe797fbb09a91.

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -1191,6 +1191,9 @@ endif
   lib_deps = ' $(ZLIB_DEP)'
   mingw_libs = ''
   mingw_lib_deps = ' $(ZLIB_DEP)'
+  if lib.language == 'c++':
+    lib_deps += ' $(PROTOBUF_DEP)'
+    mingw_lib_deps += ' $(PROTOBUF_DEP)'
   for dep in lib.get('deps', []):
     libs = libs + ' -l' + dep
     lib_deps = lib_deps + ' $(LIBDIR)/$(CONFIG)/lib' + dep + '.$(SHARED_EXT)'
